--- a/src/razter/CMakeLists.txt
+++ b/src/razter/CMakeLists.txt
@@ -6,4 +6,6 @@ file(GLOB_RECURSE RAZTER_C *.c)
 
 add_library(razter ${RAZTER_HEADERS} ${RAZTER_CPP} ${RAZTER_C})
 
-target_include_directories (razter PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories (razter PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../../include)
+
+target_link_libraries (razter glfw ${GLFW_LIBRARIES})
