Drawing in OpenGL

--- a/src/razter-Test/CMakeLists.txt
+++ b/src/razter-Test/CMakeLists.txt
@@ -10,8 +10,14 @@ if(APPLE)
 		MACOSX_BUNDLE 
 		${RAZTER_TEST_SRC}
 	)
+elseif(MSVC)
+	add_executable(razter-Test ${RAZTER_TEST_H} ${RAZTER_TEST_C} ${RAZTER_TEST_CPP})
+	file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/res" DESTINATION "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Debug")
+	file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/res" DESTINATION "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Release")
+	file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/res" DESTINATION "${CMAKE_BINARY_DIR}/src/razter-Test")
 else()
 	add_executable(razter-Test ${RAZTER_TEST_H} ${RAZTER_TEST_C} ${RAZTER_TEST_CPP})
+	file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/res" DESTINATION "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
 endif()
 
 target_include_directories (razter-Test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../../include)
