--- a/src/razter-Test/CMakeLists.txt
+++ b/src/razter-Test/CMakeLists.txt
@@ -2,16 +2,16 @@ cmake_minimum_required(VERSION 2.8.11)
 
 file(GLOB_RECURSE RAZTER_TEST_H *.h)
 file(GLOB_RECURSE RAZTER_TEST_C *.c)
-file(GLOB_RECURSE RAZTER_TEST_CPP *.cpp)
 
 if(APPLE)
 	add_executable(
 		razter-Test 
 		MACOSX_BUNDLE 
-		${RAZTER_TEST_SRC}
+		${RAZTER_TEST_H} 
+		${RAZTER_TEST_C}
 	)
 else()
-	add_executable(razter-Test ${RAZTER_TEST_H} ${RAZTER_TEST_C} ${RAZTER_TEST_CPP})
+	add_executable(razter-Test ${RAZTER_TEST_H} ${RAZTER_TEST_C})
 endif()
 
 target_include_directories (razter-Test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../../include)
